fix top bar header shift

--- a/templates/layout/header/css/header.css
+++ b/templates/layout/header/css/header.css
@@ -685,6 +685,10 @@ div#block-cua-theme-breadcrumbs {
     border: none !important
 }
 
+.secondary-menu {
+    margin-bottom: 0 !important;
+}
+
 /* Responsive */
 @media only screen and (max-width: 991px) {
     #navbar-main {
